--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">同城相爱交友</string>
-    <string name="app_name_short">同城相爱</string>
+    <string name="app_name">有缘恋爱交友</string>
+    <string name="app_name_short">有缘恋爱</string>
     <string name="setting">设置</string>
     <string name="about">关于</string>
     <string name="feed_back">意见反馈</string>
